--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Music Searcher</title>
 		 <!-- bootstrap css -->
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -21,39 +22,53 @@
 
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
-				<form class="text-center" id="music">
+				<form class="text-center" id="spotify-search" >
 	          		<div class="form-group">
-	          			<input class="form-control" id="user_input" placeholder="What song are you looking for?" autofocus>
+	          			<input class="form-control" id="track" placeholder="What song are you looking for?" autofocus>
 	            		
 	          		</div>
+	          		<div class="form-group">
+            			<input type="submit" class="btn btn-success" value="Search">
+         			</div>
 	          	</form>
-			</div>
+	          	<hr>
+          			<img src="loading.gif" width="80" id="loading">
+        	</div>
+        			<div id="results"></div>
 		</div>
 	</div>
-	<script type="text/template" id="template">
-    		<div class="searchresults">
-      			<p>
-        			<span class="openinput"><%= song %> 
-        			<br>
-        			<br>
-        			 <%= artist %></span>
-        			&nbsp;
-        			<button type="button" class="close delete" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      			</p>	
-      			<hr>
-    		</div>
-  		</script>
+	
 
 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
 	  <!-- bootstrap js -->
-	  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	  	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 	  <!-- underscore -->
-	  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+	  	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 	  <!-- custom script -->
-	  <script type="text/javascript" src="script.js"></script>	
+	  	<script type="text/javascript" src="script.js"></script>	
+
+		<script type="text/template" id="track-template">
+		    <div class="track">
+		      <div class="row">
+		        <div class="col-xs-4">
+		          <img src="<%= albumArt %>" class="img-responsive">
+		        </div>
+		        <div class="col-xs-8">
+		          <p>
+		            <strong><%= name %></strong> by <%= artist %>
+		          </p>
+		          <p>
+		            <a href="<%= previewUrl %>" target="_blank" class="btn btn-sm btn-default">Preview <span class="glyphicon glyphicon-play"></span></a>
+		          </p>
+		        </div>
+		      </div>
+		      <hr>
+		    </div>
+  		</script>
 </body>
 </html>
