--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
+				<center><img id="vinyl" src="vinyl.jpg" alt="vinyl"></center>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-3 col-md-6">
 				<center><h1>The Song Searcher</h1></center>
 			</div>
 		</div>
@@ -55,16 +60,18 @@
 		<script type="text/template" id="track-template">
 		    <div class="track">
 		      <div class="row">
-		        <div class="col-xs-4">
+		        <div class="col-xs-offset-4 col-xs-4">
 		          <img src="<%= albumArt %>" class="img-responsive">
 		        </div>
-		        <div class="col-xs-8">
+		        <div class="col-xs-offset-4 col-xs-4">
 		          <p>
-		            <strong><%= name %></strong> by <%= artist %>
+		            <strong><%= name %></strong><br> by <%= artist %>
 		          </p>
+		          <div class="col-xs-offset-8 col-xs-4">
 		          <p>
 		            <a href="<%= previewUrl %>" target="_blank" class="btn btn-sm btn-default">Preview <span class="glyphicon glyphicon-play"></span></a>
 		          </p>
+		          </div>
 		        </div>
 		      </div>
 		      <hr>
